[package]
name = "schwab_api"
version = "0.0.2"
license = "MIT"
readme = "README.md"
repository = "https://github.com/z-Wind/schwab_api"
description = "An unofficial rust library for Schwab API"
keywords = ["schwab", "api"]
categories = ["api-bindings"]
authors = ["zWindr <zpsyhapcst@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.9", features = ["chrono_0_4"] }
serde_repr = "0.1"
governor = "0.6"
chrono = { version = "0.4", features = ["serde", "clock"] }
oauth2 = "4.4"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5.0"
url = "2.5"
http = "1.1"
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
thiserror = "1.0"
open = "5"
async-channel = "2.3"
urlencoding = "2.1"
derive_builder = "0.20"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
serde_test = "1.0"
mockito = "1.5"
pretty_assertions = "1.4"
assert-json-diff = "2.0"
float-cmp = "0.9"

[features]
test_online = []
danger = []
