[package]
name = "schwab_api"
version = "0.0.3"
license = "MIT"
readme = "README.md"
repository = "https://github.com/z-Wind/schwab_api"
description = "An unofficial rust library for Schwab API"
keywords = ["schwab", "api"]
categories = ["api-bindings"]
authors = ["zWindr <zpsyhapcst@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12", features = ["chrono_0_4"] }
serde_repr = "0.1"
governor = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
oauth2 = "5.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "6.0"
url = "2.5"
http = "1.3"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
thiserror = "2.0"
open = "5"
async-channel = "2.3"
urlencoding = "2.1"
derive_builder = "0.20"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serde_test = "1.0"
mockito = "1.7"
pretty_assertions = "1.4"
assert-json-diff = "2.0"
float-cmp = "0.10"
regex = "1.11"

[features]
test_online = []
danger = []
